kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elbing
  labels:
    app: elbing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: elbing-pod
  template:
    metadata:
      labels:
        app: elbing-pod
    spec:
      imagePullSecrets:
        - name: azure-cr
      nodeSelector:
        kubernetes.azure.com/mode: user
      containers:
        - name: k8s-elbing
          image: inossem.azurecr.io/elbing-dc
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
            - name: management
              containerPort: 8558
              protocol: TCP
          livenessProbe:
            httpGet:
              port: 8000
              path: /home
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              port: management
              path: /ready
            periodSeconds: 10
            failureThreshold: 10
            initialDelaySeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: elbing-svc
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      name: elbing-port
    - port: 8558
      targetPort: 8558
      name: akka-port
  selector:
    app: elbing-pod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgo-ingress-elbing
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: beta-elbing.pgo.plus
      http:
        paths:
          - path: /
            backend:
              service:
                name: elbing-svc
                port:
                  number: 8000
            pathType: Exact
